# helioscta-pjm-da

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  install_tmux.sh
backend/: Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  test_pipeline.py
backend/@TODO/pjm-like-day/: prompt1-like-day-model copy.md
backend/src/: .env  api.py  settings.py
backend/src/api/: __init__.py  main.py
backend/src/backtesting/: __init__.py  config.py  engine.py  io.py  metrics.py  report.py
backend/src/data/: dates.py  frame_validation.py  fuel_mix_hourly.py  gas_prices.py  gas_prices_hourly.py  ice_power_intraday.py  lmps.py  lmps_hourly.py  load_da_hourly.py  load_forecast_vintages.py  load_rt_metered_hourly.py  meteologica_da_price_forecast.py  meteologica_euro_ens_forecast.py  meteologica_generation_forecast_hourly.py  meteologica_load_forecast_hourly.py  outages_actual_daily.py  outages_forecast_daily.py  pjm_load_forecast_hourly.py  pjm_solar_forecast_hourly.py  pjm_wind_forecast_hourly.py  solar_forecast_hourly.py  solar_forecast_vintages.py  sql_templates.py  tie_flows_hourly.py  transmission_outages.py  weather_hourly.py  wind_forecast_hourly.py  wind_forecast_vintages.py
backend/src/lasso_quantile_regression/: configs.py
backend/src/lightgbm_quantile/: configs.py  utils.py
backend/src/like_day_forecast/: configs.py  like_day.py  pipeline.py  settings.py
backend/src/pjm_like_day/: configs.py  like_day.py  pipeline.py  test_pipeline.py
backend/src/reporting/: generate_report.py  master_report.py
backend/src/scripts/: profile_pulls.py  rebuild_report.py  refresh_cache.py  run_backtest.py
backend/src/supply_stack_model/: __init__.py  configs.py
backend/src/utils/: azure_blob_storage_utils.py  azure_postgresql.py  cache_utils.py  day_type.py  logging_utils.py  slack_utils.py
backend/src/views/: __init__.py  forecast_results.py  fuel_mix_7_day_lookback.py  gas_prices.py  generation_forecast_vintages.py  ice_power_intraday.py  lasso_qr_forecast_results.py  lasso_qr_strip_forecast_results.py  lgbm_qr_forecast_results.py  lgbm_qr_strip_forecast_results.py  like_day_forecast_results.py  like_day_strip_forecast_results.py  lmp_7_day_lookback_western_hub.py  load_forecast_vintages.py  (+9 more)
backend/tests/: test_day_type_profiles.py  test_refresh_cache_registry.py
da-model/: .gitignore  pyproject.toml  requirements.txt
da-model/notebooks/: model_investigation.ipynb
da-model/src/: settings.py
like-day-model/: .gitignore  pyproject.toml  requirements.txt
like-day-model/notebooks/: investigate_forecast.ipynb  validate_calendar_data.ipynb  validate_gas_data.ipynb  validate_lmp_data.ipynb  validate_load_data.ipynb  validate_target_features_data.ipynb  validate_weather_data.ipynb
like-day-model/tests/: test_features.py  test_filtering.py  test_similarity.py
(+426 files in other folders)
