[tool.poetry]
name = "pjm-like-day-forecast"
version = "0.1.0"
description = "Like-day probabilistic LMP forecast model for PJM Western Hub"
authors = ["Helios CTA"]
packages = [{include = "pjm_like_day_forecast", from = "src"}]
exclude = ["*.logs", "*.png", "*.csv", "*.xlsx", "*.xlsm"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scipy = ">=1.11.0"
scikit-learn = ">=1.3.0"
psycopg2-binary = "==2.9.10"
python-dotenv = "==1.0.1"
pyarrow = ">=12.0.0"
pytz = "*"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
ipython = "*"
jupyter = "*"
notebook = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
